# ropa

./: .gitignore  LICENSE  README.md  pyproject.toml
.ropayr/: history.json  ram.json
bench/: compare.py
docs/: ci.md  features.md  problem.md
examples/: cart.robot  flaky.robot  login.robot  web_heavy.robot  web_login.robot  web_many.robot  web_realistic.robot
ropayr_results/: log.html  report.html
src/ropa/: __init__.py  admission.py  budget.py  cli.py  discover.py  history.py  merge.py  ramstats.py  runner.py
